# redline-iq

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml  docker-publish.yml  lint.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/public/: index.html  viz.html
backend/src/: auth.rs  course_export.rs  db.rs  gpx.rs  main.rs  ridewithgps.rs
docs/: architecture.md  building.md
garmin_app/: Dockerfile  Makefile  manifest.xml  test_ride.fit
garmin_app/resources/: strings.xml
garmin_app/source/: CloudSyncer.mc  LiveSegmentApp.mc  LiveSegmentDelegate.mc  LiveSegmentView.mc  SegmentTracker.mc
