[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4.3"
